# PathTracer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: .clang-format  Camera.cpp  Camera.h  Program.cpp  Program.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderInclude.h  Structs.cpp  Structs.h  Swapchain.cpp  Swapchain.h  TransientCommandBuffer.cpp  TransientCommandBuffer.h  main.cpp  pch.h
src/passes/: BasePass.cpp  BasePass.h  LightingPass.cpp  LightingPass.h  RestirPass.cpp  RestirPass.h  SpatialReusePass.cpp  SpatialReusePass.h
src/shaders/: CMakeLists.txt  base.frag  base.vert  lighting.frag  lighting.vert  restir.rgen  spatialReuse.comp  visibility.rchit  visibility.rmiss
src/shaders/include/: brdf.glsl  random.glsl  reservoir.glsl  restir.glsl  structs.glsl  visibility.glsl
